--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@sonicgarden/rewrap": "^1.1.1",
+    "@types/node": "^20.8.10",
     "bootstrap": "^5.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
