fix/hostが誤っていたため変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   pool: 5
   username: docker
   password: docker
-  host: mysql_container
+  host: 127.0.0.1
   database: my_testdb
 
 development:
