--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,3 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
   adapter: mysql2
   encoding: utf8
@@ -20,3 +14,6 @@ development:
 test:
   <<: *default
   database: my_testdb_test
+
+production:
+  url: <%= ENV['DATABASE_URL'] %>
