--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for lbrestaurant-website on 2024-01-02T18:17:24+09:00
+# fly.toml app configuration file generated for lbrestaurant on 2024-01-02T18:17:24+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "lbrestaurant-website"
+app = "lbrestaurant"
 primary_region = "nrt"
 console_command = "/rails/bin/rails console"
 
@@ -23,8 +23,12 @@ console_command = "/rails/bin/rails console"
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 256
 
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
+
+[[mounts]]
+  source = "pg_data"
+  destination = "/mnt/pg_data"
