--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for lbrestaurant on 2024-01-02T18:17:24+09:00
+# fly.toml app configuration file generated for lbrestaurant-website on 2024-01-05T00:34:57+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "lbrestaurant"
+app = "lbrestaurant-website"
 primary_region = "nrt"
 console_command = "/rails/bin/rails console"
 
@@ -15,8 +15,6 @@ console_command = "/rails/bin/rails console"
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
 
@@ -28,7 +26,3 @@ console_command = "/rails/bin/rails console"
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
-
-[[mounts]]
-  source = "pg_data"
-  destination = "/mnt/pg_data"
