fix/database.ymlのdefault設定のhostをlocalhostに変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   pool: 5
   username: docker
   password: docker
-  host: 127.0.0.1
+  host: localhost
   database: my_testdb
 
 development:
