--- a/config/database.yml
+++ b/config/database.yml
@@ -1,21 +1,16 @@
 default: &default
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql2
+  encoding: utf8
   pool: 5
   username: docker
   password: docker
-  host: localhost
-  port: 5432
-  database: lbrestaurant_db
+  host: 127.0.0.1
+  database: my_testdb
 
 development:
   <<: *default
-  database: lbrestaurant_db_develop
+  database: my_testdb_development
 
 test:
   <<: *default
-  database: lbrestaurant_db_test
-
-production:
-  adapter: postgresql
-  url: <%= ENV['DATABASE_URL'] %>
+  database: my_testdb_test
