update/envにmailerで利用するメールアドレスなど各種内容を追加

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,11 @@ ADMIN_EMAIL =
 ADMIN_PASSWORD =
 ADMIN_NAME =
 
+ADMIN_INFO_EMAIL = 
+ADMIN_INFO_PASSWORD = 
+
+ADMIN_OFFICER_EMAIL = 
+ADMIN_OFFICER_PASSWORD = 
+ADMIN_OFFICER_NAME =  
+
 DATABASE_URL =
