--- a/config/database.yml
+++ b/config/database.yml
@@ -14,3 +14,7 @@ development:
 test:
   <<: *default
   database: my_testdb_test
+
+production:
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
